// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ddbScan resolves with a correct value 1`] = `
[
  {
    "dummyItemKey": "dummyItemValue",
  },
]
`;

exports[`ddbScan sends "ScanCommand" with correct args 1`] = `
{
  "ExclusiveStartKey": undefined,
  "ProjectionExpression": "dummyAttribute",
  "TableName": "dummyTableName",
}
`;

exports[`ddbScan when "LastEvaluatedKey" exists in "ScanCommand" output resolves with a correct value 1`] = `
[
  {
    "dummyItemKey1": "dummyItemValue1",
  },
  {
    "dummyItemKey2": "dummyItemValue2",
  },
]
`;

exports[`ddbScan when "LastEvaluatedKey" exists in "ScanCommand" output sends "ScanCommand" a second time with correct args 1`] = `
{
  "ExclusiveStartKey": {
    "lastKeyProp": "lastKeyValue",
  },
  "ProjectionExpression": "dummyAttribute",
  "TableName": "dummyTableName",
}
`;
